--- a/config.json
+++ b/config.json
@@ -1,5 +1,13 @@
 {
+   "render": {
+      "mode": "wireframe",
+      "axis": true
+   },
    "camera": {
+      "fix": false,
+      "fovy": 0.7853981633974483,
+      "z_near": 0.1,
+      "z_far": 1000,
       "rotation": {
          "x": 0,
          "y": 0,
