--- a/config.json
+++ b/config.json
@@ -9,14 +9,14 @@
       "z_near": 0.1,
       "z_far": 1000,
       "rotation": {
-         "x": 65,
-         "y": 0,
-         "z": 200
+         "x": 0,
+         "y": 90,
+         "z": 0
       },
       "translation": {
-         "x": -4,
-         "y": 13,
-         "z": 5
+         "x": 1,
+         "y": 0.1,
+         "z": 0
       }
    },
    "screen": {
@@ -25,7 +25,7 @@
    },
    "objects": [
       {
-         "path": "examples/Apricot/Apricot_02_hi_poly.obj"
+         "path": "examples/lamp/desk_lamp.obj"
       }
    ],
    "lights": [
@@ -33,28 +33,28 @@
          "type": "point",
          "fix": false,
          "translation": {
-            "x": -6,
-            "y": 6,
-            "z": 6
+            "x": -1,
+            "y": 1,
+            "z": 1
          },
          "intensity": [
-            300,
-            300,
-            300
+            5,
+            5,
+            5
          ]
       },
       {
          "type": "point",
          "fix": false,
          "translation": {
-            "x": 6,
-            "y": -6,
-            "z": -9
+            "x": 1,
+            "y": -1,
+            "z": -1.5
          },
          "intensity": [
-            20,
-            20,
-            20
+            1,
+            1,
+            1
          ]
       }
    ]
